--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,5 +1,4 @@
 apiVersion: apps/v1
-kind: apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgre
@@ -25,7 +24,6 @@ spec:
         - name: POSTGRES_PASSWORD
           value: Pg1234
 ---
-# 
 apiVersion: v1
 kind: Service
 metadata:
@@ -36,3 +34,47 @@ spec:
   ports:
   - port: 5432
     targetPort: 5432
+
+---
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: fakeshop
+spec:
+  selector:
+    matchLabels:
+      app: fakeshop
+  template:
+    metadata:
+      labels:
+        app: fakeshop
+    spec:
+      containers:
+      - name: fakeshop
+        image: luizineduardo/fake-shop:v1
+        ports:
+        - containerPort: 5000
+        env:
+        - name: DB_HOST
+          value: postgres
+        - name: DB_USER
+          value: fakeshop
+        - name: DB_PASSWORD
+          value: Pg1234
+        - name: DB_NAME
+          value: fakeshop
+        - name: FLAK_APP
+          value: index.py
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: fakeshop
+spec:
+  selector:
+    app: fakeshop
+  ports:
+  - port: 80
+    targetPort: 5000
+  type: LoadBalancer
